# bsc-thesis

run-tracker-be-main/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
run-tracker-be-main/app/: dependencies.py  main.py
run-tracker-be-main/app/alembic/: env.py
run-tracker-be-main/app/alembic/versions/: 00001_add_users_table.py  00002_add_goal_achievement_models.py
run-tracker-be-main/app/core/: db.py  unit_of_work.py
run-tracker-be-main/app/core/config/: __init__.py  app.py  auth.py  base.py  db.py  settings.py
run-tracker-be-main/app/core/exc/: __init__.py  auth.py  base.py  handlers.py
run-tracker-be-main/app/enums/: base.py  goal.py  run.py  statistics.py
run-tracker-be-main/app/models/: __init__.py  achievement.py  base.py  goal.py  run.py  user.py
run-tracker-be-main/app/repositories/: achievement.py  base.py  goal.py  leaderboard.py  run.py  user.py
run-tracker-be-main/app/routers/: __init__.py  achievements.py  auth.py  goals.py  health_check.py  leaderboard.py  runs.py  statistics.py  users.py
run-tracker-be-main/app/schemas/: achievements.py  auth.py  goals.py  leaderboard.py  runs.py  statistics.py  users.py
run-tracker-be-main/app/services/: achievement.py  auth.py  goal.py  leaderboard.py  run.py  statistics.py  user.py
run-tracker-be-main/app/utils/: security.py
run-tracker-fe-main/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
run-tracker-fe-main/public/: manifest.json
run-tracker-fe-main/src/: App.jsx  fix-icons.css  index.css  main.jsx
(+31 files in other folders)
